Update report with GitHub link.

--- a/final_report.tex
+++ b/final_report.tex
@@ -1101,6 +1101,16 @@ engineering the feature representation of text units such that patterns emerge
 that encourages the proper labeling of text units. Both of those endeavors have
 the clear potential of proving very rewarding to any interested researchers.
 
+\subsection{Work Products}\label{subsec:work_products}
+
+All of the work products used to perform this study, including the source
+\LaTeX\; used to produce this report, are available via GitHub at the following
+link:
+
+\begin{verbatim}
+  https://github.com/marctheshark3/UCF-NLP-Bullydetection
+\end{verbatim}
+
 \bibliographystyle{ieeetr}
 \bibliography{final_report}
 
